--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html {
 body {
   font-size: 15px;
   font-size: 0.9375rem;
-  font-family: "Open sans", Helvetica, Arial, sans-serif;
+  font-family: "Open sans", helvetica, arial, sans-serif;
   color: #666666;
   padding: 0;
 }
@@ -92,7 +92,7 @@ img {
   font-size: 0.75rem;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "helvetica neue", helvetica, arial, sans-serif;
   color: #333;
   -webkit-border-radius: 0px;
   -webkit-background-clip: padding-box;
